package com.iluwatar.my_factory_method_0.library;

public enum ResourceType {
	DRIVE, VM, DB
}
